examples/errors/esem4.c
int main ()
{
	int array [2][2];
	
	array [0] = 5;
}

